feat: sponsor transactions for abstract currencies too
